<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:animateLayoutChanges="true"
        android:fitsSystemWindows="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.ns.custom.CustomTxtView_ColumbiaSerialLight
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="68dp"
            android:gravity="start"
            android:lineSpacingExtra="10dp"
            android:text="@string/login_title"
            android:textAllCaps="false"
            android:textColor="@color/whight"
            android:textSize="@dimen/txt_30" />

        <com.ns.custom.CustomTxtView_ColumbiaSerialLight
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:alpha="0.5"
            android:gravity="start"
            android:lineSpacingExtra="5dp"
            android:text="@string/login_header"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <com.ns.custom.CustomTxtView_ColumbiaSerialLight
            android:id="@+id/textView_account_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="76dp"
            android:alpha="0.5"
            android:text="@string/login_accountId"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/editText_account_id"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/drawable_edittext_background"
            android:inputType="textPersonName"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/whight" />


        <Button
            android:id="@+id/btn_login_confirm"
            style="@style/StellarWhiteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="start|center_vertical"
            android:paddingStart="25dp"
            android:text="@string/confirm_button"
            android:textAllCaps="false" />


        <com.ns.custom.CustomTxtView_ColumbiaSerialLight
            android:id="@+id/login_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:alpha="0.5"
            android:gravity="start"
            android:lineSpacingExtra="5dp"
            android:text="@string/signup_button"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>