<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="30dp"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:animateLayoutChanges="true"
        android:fitsSystemWindows="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".login.LoginActivity">

        <com.ns.custom.CustomTxtView_ColumbiaSerialLight
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:gravity="start"
            android:text="@string/login_title"
            android:textAllCaps="false"
            android:textColor="@color/whight"
            android:textSize="@dimen/txt_30" />

        <com.ns.custom.CustomTxtView_ColumbiaSerialLight
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:alpha="0.5"
            android:gravity="start"
            android:lineSpacingExtra="5dp"
            android:text="@string/password_header"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <com.ns.custom.CustomTxtView_ColumbiaSerialLight
            android:id="@+id/textView_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="81dp"
            android:alpha="0.5"
            android:text="@string/login_password"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/editText_account_password"
            style="@style/StellarEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:letterSpacing="0.40"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_login"
            style="@style/StellarWhiteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="31dp"
            android:gravity="start|center_vertical"
            android:paddingStart="25dp"
            android:text="@string/login_button"
            android:textAllCaps="false" />

        <com.ns.custom.CustomTxtView_ColumbiaSerialLight
            android:id="@+id/textview_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/login_forgot_password"
            android:textAllCaps="true"
            android:textColor="@color/whight"
            android:textSize="@dimen/txt_16" />

    </LinearLayout>

    <include
        layout="@layout/tc_content_slide_up_view"
        android:visibility="gone" />
</RelativeLayout>