<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <com.ns.custom.CustomTxtView_ColumbiaSerialLight
        android:id="@+id/textView"
        android:textSize="@dimen/txt_26"
        android:textColor="@color/whight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:text="@string/cab_pref_title" />

    <com.ns.custom.CustomTxtView_ColumbiaSerialLight
        android:id="@+id/textView_cab_heading"
        android:textSize="@dimen/txt_14"
        android:textColor="@color/whight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:alpha="0.5"
        android:lineSpacingExtra="5dp"
        android:text="@string/cab_pref_heading" />





    <LinearLayout
        android:id="@+id/layout_cab_pickup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="11dp"
        android:background="@drawable/drawable_booking_list_bg"
        android:alpha="0.7"
        android:orientation="vertical"
        android:paddingBottom="18dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.ns.custom.CustomTxtView_ColumbiaSerialLight
                android:id="@+id/textView_pickup_title"
                android:textSize="@dimen/txt_22"
                android:textColor="@color/whight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/cab_personalize_pickup_title" />

            <com.ns.custom.CustomTxtView_ColumbiaSerialLight
                android:id="@+id/textView_pickup_optional"
                android:textSize="@dimen/txt_12"
                android:textColor="@color/whight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:alpha="0.4"
                android:gravity="end|center"
                android:text="@string/cab_personalize_optional_title" />
        </LinearLayout>

        <com.ns.custom.CustomTxtView_ColumbiaSerialLight
            android:id="@+id/textView_cab_pickup_location"
            android:textSize="@dimen/txt_12"
            android:textColor="@color/whight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:alpha="0.5"
            android:text="@string/cab_personalize_pickup_location" />

        <com.ns.custom.CustomTxtView_ColumbiaSerialLight
            android:id="@+id/editText_pick_location1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="@dimen/txt_12"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:alpha="0.3"
            android:background="@drawable/drawable_edittext_background"
            android:gravity="center_vertical"
            android:hint="@string/cab_personalize_pickup_enter_location"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_cab_drop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="11dp"
        android:alpha="0.7"
        android:background="@drawable/drawable_booking_list_bg"
        android:orientation="vertical"
        android:paddingBottom="18dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.ns.custom.CustomTxtView_ColumbiaSerialLight
                android:textSize="@dimen/txt_22"
                android:textColor="@color/whight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/cab_personalize_drop_title" />

            <TextView
                android:id="@+id/textView_drop_optional"
                style="@style/StellarTextView_12sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:alpha="0.4"
                android:gravity="end|center"
                android:text="@string/cab_personalize_optional_title" />
        </LinearLayout>

        <com.ns.custom.CustomTxtView_ColumbiaSerialLight
            android:id="@+id/textView_cab_drop_location"
            android:textSize="@dimen/txt_12"
            android:textColor="@color/whight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:alpha="0.5"
            android:text="@string/cab_personalize_drop_location" />

        <com.ns.custom.CustomTxtView_ColumbiaSerialLight
            android:id="@+id/editText_drop_location1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="@dimen/txt_12"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:alpha="0.3"
            android:background="@drawable/drawable_edittext_background"
            android:gravity="center_vertical"
            android:hint="@string/cab_personalize_pickup_enter_location"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/transparent" />

    <Button
        android:id="@+id/button_cab_preferences_update"
        style="@style/StellarWhiteButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="21dp"
        android:gravity="center_vertical|start"
        android:text="@string/confirm_button"
        android:textAllCaps="false" />

</LinearLayout>
