<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">


    <com.ns.custom.CustomTxtView_ColumbiaSerialLight
        android:id="@+id/textVIew_confirmed_booking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:gravity="start"
        android:lineSpacingExtra="10dp"
        android:text="@string/booking_success_confirmed"
        android:textAllCaps="false"
        android:textColor="@color/whight"
        android:textSize="@dimen/txt_30" />

    <com.ns.custom.CustomTxtView_ColumbiaSerialLight
        android:id="@+id/textView_confirmed_arrival_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:alpha="0.5"
        android:gravity="start"
        android:lineSpacingExtra="5dp"
        android:text="@string/booking_success_message"
        android:textColor="@color/whight"
        android:textSize="@dimen/txt_16"
        android:visibility="gone" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/button_confirmed_personalize"
        style="@style/StellarWhiteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="14dp"
        android:gravity="start|center_vertical"
        android:paddingStart="16dp"
        android:text="@string/personalize"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:visibility="gone" />

    <com.ns.custom.CustomTxtView_ColumbiaSerialLight
        android:id="@+id/textView_confirmed_contact_us_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="40dp"
        android:alpha="0.5"
        android:gravity="start"
        android:lineSpacingExtra="5dp"
        android:text="@string/personalize_message"
        android:textColor="@color/whight"
        android:textSize="@dimen/txt_16"
        android:visibility="gone" />

</LinearLayout>
